Migrate from deprecated Number constructors (new Integer(), new Double(), new Long(), etc.) to factory methods (Integer.valueOf(), etc.)
SVN r61373 |2018-12-09 16:03:26 +0000